--- a/css/responsive.css
+++ b/css/responsive.css
@@ -68,7 +68,7 @@
     .mainmenu-area #primary-menu ul {
         overflow-y: auto;
         max-height: 70vh;
-        margin: 0;
+        /*margin: 0;*/
     }
     .mainmenu-area #primary-menu > ul > li > a {
         padding: 15px;
